Bug 118319 - knewstuff dialog malformed with R2L languages
Summary: knewstuff dialog malformed with R2L languages
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: knewstuff (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Josef Spillner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-14 16:27 UTC by Levy, Chen
Modified: 2006-06-01 17:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Malformed knewstuff dialog in Hebrew (39.77 KB, image/png)
2005-12-14 16:30 UTC, Levy, Chen
Details
fix layout problems on RTL desktops (570 bytes, patch)
2005-12-17 13:04 UTC, Diego Iastrubni
Details
new patch (956 bytes, patch)
2006-05-31 22:45 UTC, Diego Iastrubni
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Levy, Chen 2005-12-14 16:27:39 UTC
Version:            (using KDE KDE 3.5.0)
Installed from:    Ubuntu Packages
Compiler:          gcc (GCC) 4.0.2 20050808 (prerelease) (Ubuntu 4.0.1-4ubuntu9) I got this info by: `gcc --version` on my system
OS:                Linux

> Description:

The dialog box of "Get Hot New Stuff" is malformed when using a Right-to-Left (R2L) language such as Hebrew. The list of available items is misplaced, and thus obscures some of the controls, making the dialog unusable.

> Steps to reproduce:

0. Use the Hebrew i18n
1. Get to the desktop configuration (right click on the desktop and then 
select "Configure Desktop..."*)
2. Push the "Download new wallpapers" button - and get the "Get Hot New Stuff" dialog. 

> What happens:

You should see some of the controls obscured by the list of available wallpapers. 

> What should happen:

The item list should be positioned to the right of it's current position, under the tabs.

> Other occurrences:

This problem is visible in other places where knewstuff is used, e.g. amaroK 1.3.7 scripts.

---
* The menu Items will be translated to Hebrew. I use the English terms for consistencies sake. Moreover, thanks to the icons in the menus, it should be possible to follow the steps without understanding Hebrew.
Comment 1 Levy, Chen 2005-12-14 16:30:50 UTC
Created attachment 13907 [details]
Malformed knewstuff dialog in Hebrew

Note that the list of wallpapers does not sit in it's designated area. It
should be placed to the right under the 3 tabs.
Comment 2 Diego Iastrubni 2005-12-17 13:02:54 UTC
Hi Chen,

I moved the w_d, w_r, w_l QWidgets from the QFrame into the KTabCtl and now it seems better. 

To reproduce the bug in a smaller test case, you can use the khoststuff example in kdelibs/knewstuff using the "--reverse" switch.
Comment 3 Diego Iastrubni 2005-12-17 13:04:16 UTC
Created attachment 13955 [details]
fix layout problems on RTL desktops

This patch moves some internal widgets from the QFrame into the KTabCtl.
Comment 4 Josef Spillner 2005-12-19 09:41:26 UTC
Thanks a lot,

I'm looking into getting this into KDE 3.5.1.
For KDE 4, there will be a completely new dialog, which will undergo thorough usability review.
Comment 5 Diego Iastrubni 2005-12-24 21:10:14 UTC
The patch I introduced above fixes only a few problems. KTabCtl is not suitable for RTL languages. The tabs are not reversed on RTL desktops.

I started migrating the code to use QTabWidget. The slots and signals available on that widget are different so it will need some patience.

Josef, if you want to fix it yourself, IMHO, this is the path you should take.
Comment 6 Diego Iastrubni 2006-05-31 22:45:25 UTC
Created attachment 16383 [details]
new patch

this new patch does the same but is by FAR less intrusive. 

whats the real diffeence between KTabCtl and QTabWidgwt? (QTabWidget knows
about RTL?)

Is it ok to commit?
Comment 7 Diego Iastrubni 2006-06-01 17:12:50 UTC
*** Bug has been marked as fixed ***.