It seems that KTabCtl is buggy, and that QTabWidget does the same work, and is more RTL compatible. Solution: KTabCtl out -> QTabWidget in.

This closes bug number 118319

BUG: 118319
CCMAIL: kde-il@yahoogroups.com


svn path=/branches/KDE/3.5/kdelibs/; revision=547281